infra/k8s-stage/common/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-2:186647464304:certificate/77961846-232b-44f5-8d33-1fbae662c4e0
spec:
  ingressClassName: alb
  rules:
    - host: app.stage.lendinfra.com
      http:
        paths:
          - path: /api/*
            pathType: ImplementationSpecific 
            backend:
              service:
                name: decision-loop-server-srv
                port:
                  number: 3000
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: decision-loop-client-srv
                port:
                  number: 3000
